[Feature] Makes it possible to exclude specefic pages from the bloglist

--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -27,6 +27,9 @@
 			<trans-unit id="pages.authorImage">
 				<source>Author image</source>
 			</trans-unit>
+			<trans-unit id="pages.excludepages">
+                <source>Exclude pages</source>
+            </trans-unit>
 		</body>
 	</file>
 </xliff>
