--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -34,6 +34,20 @@
 			<trans-unit id="tx_golb_tags_editor">
 				<source>Blog Keywords</source>
 			</trans-unit>
+			<trans-unit id="tx_golb_domain_model_tag">
+				<source>Blog Keywords</source>
+			</trans-unit>
+			<trans-unit id="tx_golb_domain_model_tag.pages">
+				<source>Pages</source>
+			</trans-unit>
+			<trans-unit id="tx_golb_domain_model_tag.records">
+				<source>Records</source>
+			</trans-unit>
+			<trans-unit id="pages.golb_tags">
+				<source>Golb Tags</source>
+			</trans-unit>
+
+
 		</body>
 	</file>
 </xliff>
